<resources>
    <string name="app_name">Android Utils Lib</string>
    <string name="validate_global_number">Is Global Phone</string>
    <string name="validate_indian_number">Is Indian Phone</string>
    <string name="i_am_roboto_regular">I am Roboto Regular (Italic)</string>
    <string name="mobile">mobile</string>
    <string name="mobile_validates_on_focus_change">mobile (Formats on focus change)</string>
    <string name="json_formatter_demo">JSON Formatter Demo</string>
</resources>
